updated with more links

--- a/code_examples/raw/links_to_code.Rmd
+++ b/code_examples/raw/links_to_code.Rmd
@@ -15,3 +15,26 @@ _[Twitter](https://twitter.com/bearloga)_
 * https://wikimedia-research.github.io/Discovery-Search-Test-InterleavedLTR/
 
 
+**Serena Signorelli**  
+_[Twitter](https://twitter.com/sere_signorelli)_
+
+* https://github.com/avirgillito/unece-sandbox2015-wikistat/tree/master/reports/tourism
+
+
+**Jason Baik**  
+_[Twitter](https://twitter.com/jsonbaik)_
+
+* https://github.com/jasonbaik94/mooc_visualization_analytics
+
+
+**Martin Henze)**  
+_[Twitter](https://twitter.com/heads0rtai1s)_
+
+* https://www.kaggle.com/headsortails/kernels
+
+
+**Ogundepo Ezekiel Adebayo**  
+_[Twitter](https://twitter.com/gbganalyst)_
+
+* https://github.com/gbganalyst
+
